removed the scrollbar bug

--- a/movieGame.css
+++ b/movieGame.css
@@ -103,8 +103,6 @@ body,html{
 
 #step1{
     width:100%;
-    height:100%;
-    
 }
 #step2{
     display:none;
